# chess

./: .gitignore  AGENTS.md  README.md  how to run.md  pyproject.toml  requirements.txt  train-board-state-verifier.sh  train-q-probe.sh  vast-train-probe.sh  vast_bring_up.sh
docs/: data_pipeline.md  latent_state_training_plan.md  network_notes.md  status_2026-07-13.md  tokenization.md
notebooks/: chess_tokenizer.ipynb
scripts/: build_board_state_eval_bucket.py  collect_movetext_chars.py  count_lumbras_elos.py  download_lumbras_otb.py  evaluate_board_state_q_probe.py  extract_lumbras_2200_splits.py  histogram_game_plies.py  preprocess_board_state_verifier.py  preprocess_verifier_dataset.py  sample_pgn_games.py  serve_visualizer.py  tokenize_move.py  tokenize_pgn_dataset.py  train_board_state_q_probe.py  train_encoder_q.py  train_encoder_q_probe.py  train_inverse_transition.py  train_verifier.py  vast_download_preprocess_run.sh
src/chessgm/: data.py  network.py  network_q.py  tokenizer.py  trainer.py
tests/: test_data.py  test_histogram_game_plies.py  test_network_q.py  test_preprocess_board_state_verifier.py  test_tokenizer.py  test_train_inverse_transition.py
tools/: pgn_visualizer.html
