[project]
name = "chess-gm"
version = "0.1.0"
description = "Compact chess model experiments: PGN tokenization, verifier networks, and thinker/generator architectures."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.12",
  "cryptography>=42",
  "ipykernel>=6.29",
  "jupyter>=1.0",
  "matplotlib>=3.9",
  "numpy>=2.0",
  "pandas>=2.2",
  "requests>=2.32",
  "torch>=2.4",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
